docs: Comprehensive Swift 6.2 toolchain setup documentation
TOOLCHAIN SETUP DOCUMENTATION - COMPLETE OVERHAUL
================================================

SwiftResponsesDSL now provides comprehensive Swift 6.2 toolchain setup
guidance for all development environments and platforms.

MAJOR DOCUMENTATION ENHANCEMENTS:
=================================

1. README.md - Enhanced Requirements Section
   ✅ Xcode 26+ (beta) installation guide for macOS
   ✅ Swiftly toolchain manager setup for all platforms
   ✅ Linux direct installation instructions
   ✅ CI/CD pipeline configuration examples
   ✅ Platform requirements and system specs

2. GettingStarted.md - Complete Prerequisites Section
   ✅ Multiple installation options (Xcode, Swiftly, Linux)
   ✅ Step-by-step toolchain setup commands
   ✅ Installation verification procedures
   ✅ Common setup issues and troubleshooting
   ✅ Xcode 26 beta status and requirements

3. PlatformIntegration.md - New Toolchain Section
   ✅ Platform-specific toolchain guidance
   ✅ macOS Xcode vs Swiftly setup comparison
   ✅ Linux Ubuntu/Debian specific commands
   ✅ CI/CD integration patterns
   ✅ Cross-platform development considerations

4. Troubleshooting.md - Swift 6.2 Issues Section
   ✅ 8 specific toolchain problem categories
   ✅ Xcode command line tools version mismatches
   ✅ Swiftly PATH and configuration issues
   ✅ Swift Package Manager compatibility problems
   ✅ CI/CD pipeline failures and solutions
   ✅ IDE integration troubleshooting

5. CI/CD Workflows - Enhanced Comments
   ✅ Xcode 26+ requirement documentation
   ✅ Swift 6.2 toolchain specifications
   ✅ Platform runner requirements
   ✅ Build environment setup guidance

TOOLCHAIN SETUP OPTIONS PROVIDED:
=================================

Option 1: Xcode (macOS)
- Xcode 26+ (beta) download and installation
- Command line tools setup
- macOS 14.0+ (Sonoma) requirement

Option 2: Swiftly (All Platforms)
- Cross-platform toolchain manager
- Easy version switching
- Autom

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,8 @@ jobs:
   test:
     name: Test
     runs-on: macos-latest
+    # Note: Requires Xcode 26+ (beta) for Swift 6.2 support
+    # macOS runners automatically include latest Xcode beta
 
     strategy:
       matrix:
