--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,7 @@ jobs:
   create-release:
     name: Create Release
     runs-on: macos-latest
+    # Note: Requires Xcode 26+ (beta) for Swift 6.2 support
 
     permissions:
       contents: write
